--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
-    "webpack-bundle-analyzer": "cd src/webpack-bundle-analyzer/client && npm run build:dist && shx mv output/dist ../../../dist/release/webpack-bundle-analyzer/reporter && cd ../../../",
     "artifact:build:pwa": "cd test-app && npm run build:dist:pwa:evergreen && shx mv output/dist output/dist-pwa-evergreen && npm run build:dev:pwa:evergreen && shx mv output/dev output/dev-pwa-evergreen && npm run build:dist:pwa && shx mv output/dist output/dist-pwa && npm run build:dev:pwa && shx mv output/dev output/dev-pwa",
     "artifact:build:app": "cd test-app && npm run build:dist:evergreen && shx mv output/dist output/dist-app-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-app-evergreen && npm run build:dist && shx mv output/dist output/dist-app && npm run build:dev && shx mv output/dev output/dev-app",
     "artifact:install": "cd test-app && shx rm -rf node_modules && npm i && npm run install-build-app",
     "artifact:package": "cd dist && npm pack -q ./release && shx mv dojo-cli-build-app-* dojo-cli-build-app.tgz && cd ..",
-    "build:static:dev": "cpx \"{src,tests}/**/*.{d.ts,html,md,json,js,css}\" dist/dev && rimraf dist/dev/src/webpack-bundle-analyzer/client",
-    "build:static:release": "cpx \"src/**/*.{d.ts,json}\" dist/release && rimraf dist/release/webpack-bundle-analyzer/client",
+    "build:static:dev": "cpx \"{src,tests}/**/*.{d.ts,html,md,json,js,css}\" dist/dev",
+    "build:static:release": "cpx \"src/**/*.{d.ts,json}\" dist/release",
     "build:cjs": "tsc",
-    "build": "npm-run-all -p build:** -s webpack-bundle-analyzer -s dojo-package && rimraf src/webpack-bundle-analyzer/client/node_modules",
+    "build": "npm-run-all -p build:** -s dojo-package",
     "clean": "rimraf dist coverage output test-app/output test-app/node_modules",
     "dojo-package": "dojo-package",
     "dojo-release": "dojo-release",
@@ -69,7 +68,6 @@
     "@types/execa": "0.8.0",
     "@types/express": "4.11.0",
     "@types/express-serve-static-core": "4.16.4",
-    "@types/fs-extra": "^8.1.0",
     "@types/globby": "6.1.0",
     "@types/gzip-size": "4.0.0",
     "@types/html-webpack-plugin": "3.2.0",
@@ -81,7 +79,6 @@
     "@types/log-update": "2.0.0",
     "@types/mini-css-extract-plugin": "0.2.0",
     "@types/minimatch": "3.0.3",
-    "@types/mkdirp": "0.5.2",
     "@types/mockery": "1.4.29",
     "@types/node": "~9.6.5",
     "@types/ora": "1.3.1",
@@ -131,7 +128,6 @@
     "extra-watch-webpack-plugin": "1.0.3",
     "file-loader": "2.0.0",
     "globby": "7.1.1",
-    "mkdirp": "0.5.1",
     "gzip-size": "4.1.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
