--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "7.0.0-pre",
   "description": "CLI command to build Dojo applications",
   "engines": {
-    "npm": ">=3.0.0"
+    "node": ">=12"
   },
   "private": true,
   "homepage": "http://dojo.io",
@@ -58,7 +58,7 @@
     "arrowParens": "always"
   },
   "devDependencies": {
-    "@dojo/cli": "7.0.0-rc.1",
+    "@dojo/cli": "~7.0.0",
     "@dojo/scripts": "~4.0.2",
     "@types/clean-webpack-plugin": "0.1.2",
     "@types/compression": "0.0.36",
@@ -104,7 +104,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "7.0.0-rc.2",
+    "@dojo/webpack-contrib": "~7.0.0",
     "brotli-webpack-plugin": "1.0.0",
     "caniuse-lite": "1.0.30000973",
     "chalk": "2.4.1",
