--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "identity-loader": "1.0.1",
+    "image-webpack-loader": "6.0.0",
     "imports-loader": "0.8.0",
     "istanbul-instrumenter-loader": "3.0.1",
     "json-css-module-loader": "1.0.2",
