--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@types/clean-webpack-plugin": "0.1.2",
     "@types/compression": "0.0.36",
     "@types/connect-history-api-fallback": "1.3.1",
-    "@types/copy-webpack-plugin": "4.4.1",
+    "@types/copy-webpack-plugin": "6.0.0",
     "@types/cssnano": "4.0.0",
     "@types/execa": "0.8.0",
     "@types/express": "4.11.0",
@@ -113,6 +113,7 @@
     "compression-webpack-plugin": "4.0.0",
     "connect-history-api-fallback": "1.5.0",
     "connect-inject": "0.4.0",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "1.0.1",
     "css-url-relative-plugin": "1.0.0",
     "cssnano": "4.1.7",
@@ -147,19 +148,19 @@
     "strip-ansi": "3.0.1",
     "stylelint": "9.10.1",
     "stylelint-webpack-plugin": "0.10.5",
-    "terser-webpack-plugin": "1.1.0",
+    "terser-webpack-plugin": "4.1.0",
     "ts-loader": "5.3.0",
     "ts-node": "7.0.1",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.8.0",
     "tslint-loader": "3.5.4",
-    "typed-css-modules": "0.3.1",
+    "typed-css-modules": "0.6.4",
     "umd-compat-loader": "2.1.1",
-    "webpack": "4.25.1",
+    "webpack": "4.44.1",
     "webpack-hot-middleware": "2.24.3",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-mild-compile": "3.3.1",
-    "webpack-pwa-manifest": "3.7.1",
+    "webpack-pwa-manifest": "4.2.0",
     "wrapper-webpack-plugin": "2.0.0"
   }
 }
