--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "compression-webpack-plugin": "4.0.0",
     "connect-history-api-fallback": "1.5.0",
     "connect-inject": "0.4.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "copy-webpack-plugin": "6.0.3",
     "css-loader": "1.0.1",
     "css-url-relative-plugin": "1.0.0",
     "cssnano": "4.1.7",
