--- a/package.json
+++ b/package.json
@@ -101,10 +101,13 @@
     "serve": "11.0.0",
     "shelljs": "0.7.8",
     "shx": "0.2.2",
-    "sinon": "~4.5.0"
+    "sinon": "~4.5.0",
+    "tslint": "5.18.0"
   },
   "dependencies": {
     "@dojo/webpack-contrib": "~7.0.3",
+    "@typescript-eslint/eslint-plugin": "2.34.0",
+    "@typescript-eslint/parser": "2.34.0",
     "caniuse-lite": "1.0.30000973",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
@@ -116,6 +119,9 @@
     "css-loader": "1.0.1",
     "css-url-relative-plugin": "1.0.0",
     "cssnano": "4.1.7",
+    "eslint": "7.0.0",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-jsdoc": "25.4.2",
     "express": "4.16.2",
     "express-static-gzip": "1.1.3",
     "extra-watch-webpack-plugin": "1.0.3",
@@ -124,7 +130,7 @@
     "gzip-size": "4.1.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "http-proxy-middleware": "^0.19.0",
+    "http-proxy-middleware": "0.19.0",
     "identity-loader": "1.0.1",
     "image-webpack-loader": "6.0.0",
     "imports-loader": "0.8.0",
@@ -151,8 +157,6 @@
     "ts-loader": "5.3.0",
     "ts-node": "7.0.1",
     "tsconfig-paths-webpack-plugin": "3.2.0",
-    "tslint": "5.8.0",
-    "tslint-loader": "3.5.4",
     "typed-css-modules": "0.3.1",
     "umd-compat-loader": "2.1.1",
     "webpack": "4.25.1",
