--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
   "devDependencies": {
     "@dojo/cli": "~7.0.0",
     "@dojo/scripts": "~4.0.2",
-    "@types/clean-webpack-plugin": "0.1.2",
     "@types/compression": "0.0.36",
     "@types/connect-history-api-fallback": "1.3.1",
     "@types/copy-webpack-plugin": "4.4.1",
@@ -70,7 +69,6 @@
     "@types/express-serve-static-core": "4.16.4",
     "@types/globby": "6.1.0",
     "@types/gzip-size": "4.0.0",
-    "@types/html-webpack-plugin": "3.2.0",
     "@types/http-proxy-middleware": "^0.17.5",
     "@types/jquery": "3.3.29",
     "@types/jsonfile": "4.0.1",
@@ -86,7 +84,6 @@
     "@types/sinon": "~4.3.3",
     "@types/strip-ansi": "3.0.0",
     "@types/tapable": "1.0.4",
-    "@types/webpack": "4.4.32",
     "@types/webpack-manifest-plugin": "1.3.2",
     "@types/yargs": "10.0.0",
     "codecov": "~3.0.4",
@@ -105,12 +102,12 @@
     "tslint": "5.18.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "8.0.0-alpha.1",
+    "@dojo/webpack-contrib": "file:~/Projects/opensource/webpack-contrib/dist/release/dojo-webpack-contrib-7.0.6-pre.tgz",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
     "caniuse-lite": "1.0.30000973",
     "chalk": "2.4.1",
-    "clean-webpack-plugin": "1.0.0",
+    "clean-webpack-plugin": "3.0.0",
     "cli-columns": "3.1.2",
     "compression": "1.7.4",
     "compression-webpack-plugin": "4.0.0",
@@ -130,7 +127,7 @@
     "globby": "7.1.1",
     "gzip-size": "4.1.0",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "4.4.1",
     "http-proxy-middleware": "0.19.0",
     "identity-loader": "1.0.1",
     "image-webpack-loader": "6.0.0",
@@ -141,7 +138,7 @@
     "loader-utils": "1.1.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
-    "mini-css-extract-plugin": "0.4.2",
+    "mini-css-extract-plugin": "0.11.0",
     "minimatch": "3.0.4",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "ora": "1.3.0",
@@ -160,7 +157,7 @@
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "typed-css-modules": "0.3.1",
     "umd-compat-loader": "2.1.1",
-    "webpack": "4.25.1",
+    "webpack": "5.0.0-beta.29",
     "webpack-hot-middleware": "2.24.3",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-mild-compile": "3.3.1",
