--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "tslint": "5.18.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "~7.0.3",
+    "@dojo/webpack-contrib": "8.0.0-alpha.1",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
     "caniuse-lite": "1.0.30000973",
@@ -119,6 +119,7 @@
     "css-loader": "1.0.1",
     "css-url-relative-plugin": "1.0.0",
     "cssnano": "4.1.7",
+    "electron": "10.1.1",
     "eslint": "7.0.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-jsdoc": "25.4.2",
