--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "serve": "serve -p 9999",
     "test:ci": "run-p --race serve test",
     "test:cypress": "cypress run",
-    "test": "run-s build artifact:package artifact:install build intern artifact:build:* test:cypress",
+    "test": "run-s build artifact:package artifact:install build artifact:build:* test:cypress",
     "uploadCoverage": "codecov --file=coverage/coverage.json",
     "watch:ts": "dojo-tsc-watcher -p tsconfig.json -- dojo-package",
     "watch": "run-p watch:ts \"build:static:** -- --watch\""
@@ -62,10 +62,10 @@
     "@dojo/scripts": "~4.0.2",
     "@types/compression": "0.0.36",
     "@types/connect-history-api-fallback": "1.3.1",
-    "@types/copy-webpack-plugin": "4.4.1",
     "@types/cssnano": "4.0.0",
     "@types/execa": "0.8.0",
     "@types/express": "4.11.0",
+    "@types/webpack-manifest-plugin": "2.1.0",
     "@types/express-serve-static-core": "4.16.4",
     "@types/globby": "6.1.0",
     "@types/gzip-size": "4.0.0",
@@ -75,7 +75,6 @@
     "@types/loader-utils": "1.1.3",
     "@types/log-symbols": "2.0.0",
     "@types/log-update": "2.0.0",
-    "@types/mini-css-extract-plugin": "0.2.0",
     "@types/minimatch": "3.0.3",
     "@types/mockery": "1.4.29",
     "@types/node": "~9.6.5",
@@ -84,7 +83,6 @@
     "@types/sinon": "~4.3.3",
     "@types/strip-ansi": "3.0.0",
     "@types/tapable": "1.0.4",
-    "@types/webpack-manifest-plugin": "1.3.2",
     "@types/yargs": "10.0.0",
     "codecov": "~3.0.4",
     "cpx": "~1.5.0",
@@ -113,6 +111,7 @@
     "compression-webpack-plugin": "4.0.0",
     "connect-history-api-fallback": "1.5.0",
     "connect-inject": "0.4.0",
+    "copy-webpack-plugin": "6.1.0",
     "css-loader": "1.0.1",
     "css-url-relative-plugin": "1.0.0",
     "cssnano": "4.1.7",
@@ -131,7 +130,7 @@
     "http-proxy-middleware": "0.19.0",
     "identity-loader": "1.0.1",
     "image-webpack-loader": "6.0.0",
-    "imports-loader": "0.8.0",
+    "imports-loader": "1.1.0",
     "istanbul-instrumenter-loader": "3.0.1",
     "json-css-module-loader": "1.0.2",
     "jsonfile": "4.0.0",
@@ -146,6 +145,7 @@
     "postcss-import": "12.0.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.7.0",
+    "schema-utils": "2.7.1",
     "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
     "strip-ansi": "3.0.1",
@@ -159,7 +159,7 @@
     "umd-compat-loader": "2.1.1",
     "webpack": "5.0.0-beta.29",
     "webpack-hot-middleware": "2.24.3",
-    "webpack-manifest-plugin": "2.0.4",
+    "webpack-manifest-plugin": "3.0.0-rc.0",
     "webpack-mild-compile": "3.3.1",
     "webpack-pwa-manifest": "3.7.1",
     "wrapper-webpack-plugin": "2.0.0"
