--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "./node_modules/@dojo/scripts/tsconfig/commonjs.json",
 	"compilerOptions": {
 		"declaration": false,
+		"skipLibCheck": true,
 		"target": "es2015",
 		"types": [ "intern", "cypress" ],
 		"lib": [
