--- a/package.json
+++ b/package.json
@@ -148,11 +148,11 @@
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
-    "postcss": "^8.1.7",
-    "postcss-copy-assets": "^0.3.1",
-    "postcss-import": "^12.0.0",
+    "postcss": "8.1.7",
+    "postcss-copy-assets": "0.3.1",
+    "postcss-import": "12.0.0",
     "postcss-loader": "3.0.0",
-    "postcss-modules": "^3.2.2",
+    "postcss-modules": "3.2.2",
     "postcss-preset-env": "6.7.0",
     "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
