--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "tslint": "5.18.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "8.0.0-alpha.1",
+    "@dojo/webpack-contrib": "8.0.0-alpha.2",
     "@parcel/watcher": "2.0.0-alpha.9",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
@@ -120,6 +120,7 @@
     "css-loader": "1.0.1",
     "css-url-relative-plugin": "1.0.0",
     "cssnano": "4.1.7",
+    "date-fns": "^2.16.1",
     "electron": "10.1.1",
     "esbuild": "0.8.5",
     "eslint": "7.0.0",
