--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "css-loader": "1.0.1",
     "css-url-relative-plugin": "1.0.0",
     "cssnano": "4.1.7",
-    "date-fns": "^2.16.1",
+    "date-fns": "2.16.1",
     "electron": "10.1.1",
     "esbuild": "0.8.5",
     "eslint": "7.0.0",
