--- a/package.json
+++ b/package.json
@@ -122,8 +122,8 @@
     "globby": "7.1.1",
     "gzip-size": "4.1.0",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
-    "http-proxy-middleware": "^0.19.0",
+    "html-webpack-plugin": "4.5.2",
+    "http-proxy-middleware": "0.19.0",
     "identity-loader": "1.0.1",
     "imports-loader": "0.8.0",
     "istanbul-instrumenter-loader": "3.0.1",
@@ -157,7 +157,7 @@
     "webpack-hot-middleware": "2.24.3",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-mild-compile": "3.3.1",
-    "webpack-pwa-manifest": "3.7.1",
+    "webpack-pwa-manifest": "4.3.0",
     "wrapper-webpack-plugin": "2.0.0"
   }
 }
