--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
     "postcss-modules": "3.2.2",
     "postcss-preset-env": "6.7.0",
     "slash": "1.0.0",
-    "source-map-loader-cli": "0.0.1",
+    "source-map-loader": "^1.1.3",
     "strip-ansi": "3.0.1",
     "stylelint": "9.10.1",
     "stylelint-webpack-plugin": "0.10.5",
