--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "arrowParens": "always"
   },
   "devDependencies": {
-    "@dojo/cli": "~7.0.0",
+    "@dojo/cli": "8.0.0-rc.1",
     "@dojo/scripts": "~4.0.2",
     "@types/clean-webpack-plugin": "0.1.2",
     "@types/compression": "0.0.36",
@@ -105,7 +105,7 @@
     "tslint": "5.18.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "8.0.0-beta.5",
+    "@dojo/webpack-contrib": "8.0.0-rc.1",
     "@parcel/watcher": "2.0.0-alpha.9",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
